# nlp-course

./: 1 - Preprocessing.ipynb  pyproject.toml
