[tool.poetry]
name = "nlp-course"
version = "0.1.0"
description = ""
authors = ["Daniel Suess <daniel@dsuess.me>"]

[tool.poetry.dependencies]
python = "^3.7"
datasets = "^1.1.2"
spacy = "^2.3.2"
matplotlib = "^3.3.2"
jupyter = "^1.0.0"
notebook = "^6.1.4"
nltk = "^3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
